<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="@string/net_sett_ctg_basic_key"
        android:title="@string/net_sett_ctg_basic"
        >
        <ListPreference
            android:key="@string/net_sett_net_type_key"
            android:title="@string/net_sett_net_type_title"
            android:defaultValue="0"
            android:entries="@array/net_sett_net_type_el_titles"
            android:entryValues="@array/net_sett_net_type_el_vals"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            />

        <CheckBoxPreference
            android:key="@string/net_sett_open_last_page_key"
            android:title="@string/net_sett_open_last_page_title"
            android:summary="@string/net_sett_open_last_page_sum"
            android:defaultValue="true"
            />

        <EditTextPreference
            android:key="@string/net_sett_home_page_key"
            android:title="@string/net_sett_home_page_title"
            android:defaultValue="@string/def_home_page"
            android:selectAllOnFocus="true"
            android:inputType="textUri"
            android:capitalize="none"
            android:singleLine="false"
            />
    </PreferenceCategory>

</PreferenceScreen>